orgMetadata/force-app/main/default/objects/NSA_Configuration__c/NSA_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>NSA Configuration</label>
</CustomObject>