orgMetadata/force-app/main/default/objects/NSA_Configuration__c/fields/API_End_Date__c.field-meta.xml
<CustomField>
    <fullName>API_End_Date__c</fullName>
    <label>API_End_Date</label>
    <type>Date</type>
</CustomField>