orgMetadata/force-app/main/default/objects/NSA_Configuration__c/fields/API_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>API_Start_Date__c</fullName>
    <label>API Start Date</label>
    <type>Date</type>
</CustomField>