orgMetadata/force-app/main/default/objects/NSA_Configuration__c/fields/Holding_Period_By_Hour__c.field-meta.xml
<CustomField>
    <fullName>Holding_Period_By_Hour__c</fullName>
    <label>Holding Period By Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>