orgMetadata/force-app/main/default/objects/NSA_Configuration__c/fields/NSA_Org_Name__c.field-meta.xml
<CustomField>
    <fullName>NSA_Org_Name__c</fullName>
    <label>NSA_Org_Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>