orgMetadata/force-app/main/default/objects/NSA_Configuration__c/fields/TPA_Acronym__c.field-meta.xml
<CustomField>
    <fullName>TPA_Acronym__c</fullName>
    <label>TPA_Acronym</label>
    <length>20</length>
    <type>Text</type>
</CustomField>