orgMetadata/force-app/main/default/objects/NSA_Configuration__c/fields/Valenz_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Valenz_Endpoint_URL__c</fullName>
    <label>Valenz Endpoint URL</label>
    <length>80</length>
    <type>Text</type>
</CustomField>